--- a/js projects/diger/4/index.html
+++ b/js projects/diger/4/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <!--
+        <main>
         <div class="container">
             <h1>Counter</h1>
         </div>
@@ -17,6 +18,20 @@
             <button class="btn decrease">decrease</button>
             <button class="btn reset">reset</button>
             <button class="btn increase">increase</button>
+        </div>
+    </main>
+    -->
+    
+
+    <main>
+        <div class="container">
+            <h1>Counter</h1>
+        </div>
+        <span id="value">0</span>
+        <div class="button-container">
+            <button class="btn art">+</button>
+            <button class="btn reset">Sıfırla</button>
+            <button class="btn azal">-</button>
         </div>
     </main>
 
