--- a/js projects/1slider app/index.html
+++ b/js projects/1slider app/index.html
@@ -17,7 +17,7 @@
     
     <div class="container mt-2">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-lg-4 col-sm-8" >
 
                 <div class="card">
                     <img class="card-img-top" src="images/foto1.jpg" alt="">
