--- a/js projects/10kart-game/index.html
+++ b/js projects/10kart-game/index.html
@@ -36,7 +36,18 @@
       </div>
     </div>
 
-    <div class="card"></div>
+    <div class="card">
+      <div class="card-back card-face">
+        <img class="cob-web cob-web-top-left" src="Assets/Images/Cobweb.png">
+        <img class="cob-web cob-web-top-right" src="Assets/Images/Cobweb.png">
+        <img class="cob-web cob-web-bottom-left" src="Assets/Images/Cobweb.png">
+        <img class="cob-web cob-web-bottom-right" src="Assets/Images/Cobweb.png">
+        <img class="spider" src="Assets/Images/Spider.png" alt="">
+      </div>
+      <div class="card-front card-face">
+
+      </div>
+    </div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
